--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>一起聽團吧!人氣投票排行榜!</title>
-  <link rel="icon" type="image/x-icon" href="./static/favicon.png">
+  <link rel="icon" type="image/x-icon" href="./favicon.png">
   
   <!-- lib -->
   <!-- bootstrap -->
