--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
       <h2>人氣投票排行榜</h2>
     </div>
     <div id="buttonGroup" class="text-center mt-2 mb-2">
-      <button class="btn btn-primary mt-2" id="topBand">最佳樂團</button>
-      <button class="btn btn-primary mt-2" id="topVocalist">最佳主唱</button>
-      <button class="btn btn-primary mt-2" id="topGuitarist">最佳吉他</button>
-      <button class="btn btn-primary mt-2" id="topBassist">最佳貝斯</button>
-      <button class="btn btn-primary mt-2" id="topDrummer">最佳鼓手</button>
-      <button class="btn btn-primary mt-2" id="topKeyboard">最佳鍵盤</button>
-      <button class="btn btn-primary mt-2" id="topPlayer">最佳演奏樂手</button>
+      <button class="btn btn-primary btn-top mt-2" id="topBand">最佳樂團</button>
+      <button class="btn btn-secondary btn-top mt-2" id="topVocalist">最佳主唱</button>
+      <button class="btn btn-secondary btn-top mt-2" id="topGuitarist">最佳吉他</button>
+      <button class="btn btn-secondary btn-top mt-2" id="topBassist">最佳貝斯</button>
+      <button class="btn btn-secondary btn-top mt-2" id="topDrummer">最佳鼓手</button>
+      <button class="btn btn-secondary btn-top mt-2" id="topKeyboard">最佳鍵盤</button>
+      <button class="btn btn-secondary btn-top mt-2" id="topPlayer">最佳演奏樂手</button>
     </div>
     <div id="main" class="d-flex flex-row justify-content-center align-items-center">
       <div id="rankList" class="d-flex flex-column justify-content-center align-items-center"></div>
