--- a/index.html
+++ b/index.html
@@ -37,7 +37,11 @@
       </div>
     </div>
     <div id="main" class="d-flex flex-row justify-content-center align-items-center">
-      <div id="rankList" class="d-flex flex-column justify-content-center align-items-center"></div>
+      <div id="rankList" class="d-flex flex-column justify-content-center align-items-center">
+        <tr>
+          <th>載入中請稍後…</th>
+        </tr>
+      </div>
     </div>
   </div>
 </body>
