--- a/index.html
+++ b/index.html
@@ -38,9 +38,7 @@
     </div>
     <div id="main" class="d-flex flex-row justify-content-center align-items-center">
       <div id="rankList" class="d-flex flex-column justify-content-center align-items-center">
-        <tr>
-          <th>載入中請稍後…</th>
-        </tr>
+        <div>載入中請稍後…</div>
       </div>
     </div>
   </div>
