--- a/index.html
+++ b/index.html
@@ -26,14 +26,19 @@
     <div id="header" class="d-flex flex-column justify-content-center align-items-center">
       <h1 class="mt-2">一起聽團吧</h1>
       <h2>人氣投票排行榜</h2>
-      <div id="buttonGroup" class="text-center mb-2">
-        <button class="btn btn-primary btn-top mt-2" data-ranktype="band">最佳樂團</button>
-        <button class="btn btn-secondary btn-top mt-2" data-ranktype="vocal">最佳主唱</button>
-        <button class="btn btn-secondary btn-top mt-2" data-ranktype="guitar">最佳吉他</button>
-        <button class="btn btn-secondary btn-top mt-2" data-ranktype="bass">最佳貝斯</button>
-        <button class="btn btn-secondary btn-top mt-2" data-ranktype="drum">最佳鼓手</button>
-        <button class="btn btn-secondary btn-top mt-2" data-ranktype="keyboard">最佳鍵盤</button>
-        <button class="btn btn-secondary btn-top mt-2" data-ranktype="player">最佳演奏樂手</button>
+      <div id="btnRankClassGroup" class="text-center mb-2">
+        <button class="btn btn-primary btn-class mt-2" data-class="top">人氣榜</button>
+        <button class="btn btn-secondary btn-class mt-2" data-class="revive">復活榜</button>
+        <button class="btn btn-secondary btn-class mt-2" data-class="final">決賽榜</button>
+      </div>
+      <div id="btnRankTypeGroup" class="text-center mb-2">
+        <button class="btn btn-primary btn-type mt-2" data-type="band">最佳樂團</button>
+        <button class="btn btn-secondary btn-type mt-2" data-type="vocal">最佳主唱</button>
+        <button class="btn btn-secondary btn-type mt-2" data-type="guitar">最佳吉他</button>
+        <button class="btn btn-secondary btn-type mt-2" data-type="bass">最佳貝斯</button>
+        <button class="btn btn-secondary btn-type mt-2" data-type="drum">最佳鼓手</button>
+        <button class="btn btn-secondary btn-type mt-2" data-type="keyboard">最佳鍵盤</button>
+        <button class="btn btn-secondary btn-type mt-2" data-type="player">最佳演奏樂手</button>
       </div>
     </div>
     <div id="main" class="d-flex flex-row justify-content-center align-items-center">
