--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>一起聽團吧!人氣投票排行榜!</title>
+  <title>一起聽團吧!投票排行榜!</title>
   <link rel="icon" type="image/x-icon" href="./favicon.png">
 
   <!-- lib -->
@@ -25,7 +25,7 @@
   <div id="app" class="container">
     <div id="header" class="d-flex flex-column justify-content-center align-items-center">
       <h1 class="mt-2">一起聽團吧</h1>
-      <h2>人氣投票排行榜</h2>
+      <h2>投票排行榜</h2>
       <div id="btnRankClassGroup" class="text-center mb-2">
         <button class="btn btn-primary btn-class mt-2" data-class="top">人氣榜</button>
         <button class="btn btn-secondary btn-class mt-2" data-class="revive">復活榜</button>
