Update app.js & index.html

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <button class="btn btn-secondary btn-class mt-2" data-class="final">決賽榜</button>
       </div>
       <div id="btnRankTypeGroup" class="text-center mb-2">
-        <button class="btn btn-primary btn-type mt-2" data-type="band">最佳樂團</button>
+        <button class="btn btn-warning btn-type mt-2" data-type="band">最佳樂團</button>
         <button class="btn btn-secondary btn-type mt-2" data-type="vocal">最佳主唱</button>
         <button class="btn btn-secondary btn-type mt-2" data-type="guitar">最佳吉他</button>
         <button class="btn btn-secondary btn-type mt-2" data-type="bass">最佳貝斯</button>
