add google analytics

--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/sweetalert2/11.12.2/sweetalert2.min.css' />
   <script src='https://cdnjs.cloudflare.com/ajax/libs/sweetalert2/11.12.2/sweetalert2.all.min.js'></script>
 
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-9M6PLKFKQX"></script>
+  <script>
+    window.dataLayer = window.dataLayer || []
+    function gtag(){dataLayer.push(arguments)}
+    gtag('js', new Date())
+    gtag('config', 'G-9M6PLKFKQX')
+  </script>
+
   <!-- custom -->
   <link rel="stylesheet" href="./style.css">
   <script src="./app.js"></script>
